# SimulationBasis

./: .gitignore  CMakeLists.txt  CompileBoost_1_61_0.bat  CompileBoost_1_63_0.bat  CompileBoost_1_64_0.bat  Doxyfile.doxy  README.md  SimulationBasis.7z  demo.bat  mainpage.md
Simulation/: Bestellung.cpp  Bestellung.hpp  BestellungErgebnis.hpp  CMakeLists.txt  Customer.cpp  Customer.hpp  CustomerErgebnis.hpp  Development.cpp  Development.hpp  EingabeAusgabe.cpp  EingabeAusgabe.hpp  Lieferung.cpp  Lieferung.hpp  ModelCustomer.cpp  ModelCustomer.hpp  ModelDevelopment.cpp  ModelDevelopment.hpp  Reporter.cpp  Reporter.hpp  SimulateDevelopment.cpp  SimulateDevelopment.hpp  SimulationDaten.cpp  SimulationDaten.hpp  SimulationErgebnis.hpp  main.cpp  mainCl.cpp  modell.md  simulationControll.cpp  simulationControll.hpp  state.cpp  state.hpp  state.md  stateAbort.cpp  stateFeedback.cpp  statePrepare.cpp  statePresent.cpp  stateSimulate.cpp  structureGoal.hpp
Simulation/test/: CMakeLists - Kopie.txt  CMakeLists.txt  testBestellung.cpp  testCustomer.cpp  testDevelopment.cpp  testLieferung.cpp  testModelCustomer.cpp  testModelDevelopment.cpp  testReporter.cpp  testSimulateDevelopment.cpp  testSimulation.cpp
SimulationClient/: berechnung.js  chat.html
SimulationClient/01/: berechnung.js  chat.01.html  chat.html
SimulationClient/02/: chat.html
SimulationClient/03/: chat.html  stylesheet.css
SimulationClient/old/: berechnung.js  chat.html
SimulationClient/old/chat-Dateien/: chat.html
SimulationDokumentation/: CMakeLists.txt  Design.md  Goals.md  Requirements.md  Simulation.EAP  UC1_BestellungBearbeiten.md  UC2_KundeArbeitetMitLieferung.md  UseCases.md  Ziele.md  Zweck.md
SimulationServer/: CMakeLists.txt  room.cpp  server.cpp  session.cpp  session.hpp
